tests/cases/generics/errors/generic-aggregate-field-access.ari
struct Box[T] {
  value: T,
}

struct Token {
  kind: i64,
}

fn main() -> i64 {
  let value: Box[Token] = Box<Token> { value: Token { kind: 1 } };
  return value.missing.kind;
}
